--- a/composer.json
+++ b/composer.json
@@ -5,5 +5,6 @@
 		"nategood/httpful" : "*",
 		"camspiers/json-pretty": "1.0.*",
 		"havenondemand/havenondemand": "*",
+        "twbs/bootstrap":"4.0.0",
     }
 }
